# bookpull

./: .gitignore  .pre-commit-config.yaml  TODO.md  pyproject.toml
.github/workflows/: post-push-tests.yaml
bookpull/: app.py  link_cite.py  main.py
bookpull/templates/: index.html
lawcite/: __init__.py
tests/: test_link_cite.py  test_my_project.py  test_parse_doc_footnotes.py
tests/resources/: footnotes.xml  sample-article-footnotes.xml  sample-article-paragraph-footnotes.xml  sample-article-paragraph.docx  sample-article.docx  small-doc-footnotes.xml  small-doc.docx
