[tool.poetry]
name = "bookpull"
version = "0.1.0"
description = ""
authors = ["hrishisd <hdharam@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.2"
eyecite = "^2.5.1"
# This is needed to avoid ModuleNotFoundError: No module named 'exceptiongroup'
# when running poetry run pytest from the github action.
exceptiongroup = "^1.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^3.2.2"
mypy = "^1.1.1"
pytest-cov = "^4.0.0"
isort = "^5.12.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
